--- a/style.css
+++ b/style.css
@@ -69,11 +69,12 @@ li:hover {
 }
 
 .textSide {
-  width: 50%;
+  width: 60%;
+  margin-top: -10rem;
 }
 
 .imageSide {
-  width: 50%;
+  width: 40%;
 }
 
 .imageSide img {
@@ -167,17 +168,19 @@ li:hover {
 
 .affiliationLogos {
   display: flex;
-  width: 55%;
+  width: 100%;
   margin: auto;
   align-items: center;
   gap: 7rem;
+  margin-left: 30rem;
+  margin-top: 3rem;
 }
 
 .lines {
   display: flex;
   width: 10%;
   margin: auto;
-  margin-bottom: 4rem;
+  margin-top: 1rem;
 }
 
 .line1 {
@@ -206,17 +209,20 @@ li:hover {
 }
 
 .benefits {
-  width: 90%;
+  width: 75%;
   margin: auto;
+  margin-top: 10rem;
 }
 
 .benefitText h4 {
   color: #043caa;
   font-family: Montserrat;
-  font-size: 24px;
+  font-size: 30px;
   font-style: normal;
   font-weight: 800;
   line-height: normal;
+  width: 60%;
+  
 }
 .benefitImage img {
 width: 100%;
@@ -226,6 +232,7 @@ width: 100%;
   display: flex;
   align-items: center;
   gap: 0.5rem;
+  margin-top: 1rem;
 }
 
 .drug p {
@@ -237,6 +244,11 @@ width: 100%;
   line-height: normal;
 }
 
+.benefitFlex {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
 .benefitFlex {
   display: flex;
   justify-content: space-between;
@@ -255,6 +267,7 @@ width: 100%;
   padding: 0.5rem 2rem;
   cursor: pointer;
   background: none;
+  margin-top: 2rem;
 }
 
 .doorstepFlex {
@@ -597,6 +610,7 @@ font-size: 16px;
     font-size: 25px;
     width: 100%;
     }
+    
     .text2 button {
       color: #fff;
       font-family: Montserrat;
@@ -812,7 +826,34 @@ font-size: 16px;
     }
 }
 @media screen and (max-width:499px) {
+  .text1 h2{
+    font-size: 30px;
+    width: 100%;
+  }
+  .text1 p{
+    font-size: 15px;
+    width: 100%;
+    }
+    
+.input input {
+  padding: 0.5rem 0.8rem;
+  border: 1px solid #fff;
+  border-radius: 50px 0 0 50px;
+  width: 200px;
+}
 
+.inputBtn button {
+  padding: 0.5rem 0.8rem;
+  border: none;
+  background: #1bc768;
+  color: #fff;
+  font-family: Montserrat;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  border-radius: 0 50px 50px 0;
+}
 }
 
 @media screen and (max-width:499px) {
@@ -820,7 +861,25 @@ font-size: 16px;
 }
 
 @media screen and (max-width:375px) {
-
+  .input input {
+    padding: 0.5rem 0.8rem;
+    border: 1px solid #fff;
+    border-radius: 50px 0 0 50px;
+    width: 250px;
+  }
+  
+  .inputBtn button {
+    padding: 0.5rem 0.8rem;
+    border: none;
+    background: #1bc768;
+    color: #fff;
+    font-family: Montserrat;
+    font-size: 8px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    border-radius: 0 50px 50px 0;
+  }
 }
 
 
